<resources>
    <string name="app_name">Rositas Taqueria</string>
    <string name="welcomeText">Please login, sign up or continue as a guest</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="bag">Bag</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Welcome to Rosita\'s Taqueria!</string>
    <string name="welcome2">Welcome</string>
    <string name="name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up to save your recent orders!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="continueAsGuest">Continue as guest</string>
    <string name="account">Account</string>
    <string name="logout">Log out</string>
    <string name="placeholder">placeholder</string>
    <string name="phonenumber">Phone Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>